--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carl Jeanty, Alexey Jeffers, and Aarthi Ganesh assignment 2</title>
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
+    <script src="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"></script>
+
 </head>
 <body>
     <p>Hello world</p>
