--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             
         </div>
         <form>
-            <p>Please input query for Restaurant</p>
+            <p>Please Input Query for Restaurant</p>
             <input class="Userinput" id="userInput" type="text" placeholder="Search by: Name,Category or City"></input>
         </form>
         <div class="Resultfilter">
