attempt 3 at js

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carl Jeanty, Aarthi Ganesh and Alexey Jeffers assignment 2</title>
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
+    <script src="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"></script>
+
 </head>
 <body>
     
@@ -15,6 +17,11 @@
         <form>
             <p>Please input query for Restaurant</p>
             <input class="Userinput" id="userInput" type="text" placeholder="Search by: Name,Category or City"></input>
+            <ul class="suggestion"> 
+             <li>
+                 search example Wendy's
+             </li> 
+            </ul>
         </form>
         <div class="Resultfilter">
 
