--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carl Jeanty, Alexey Jeffers, and Aarthi Ganesh Assignment 2</title>
+    <title>Carl Jeanty, Aarthi Ganesh and Alexey Jeffers assignment 2</title>
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
+    <script src="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"></script>
+
 </head>
 <body>
     
     <div class="container">
         <div class="header">
-            <h1>Carl Jeanty, Alexey Jeffers, and Aarthi Ganesh Assignment 2</h1>
+            <h1>>Carl Jeanty, Alexey Jeffers, and Aarthi Ganesh Assignment 2</h1>
             
         </div>
         <form>
-            <p>Please Input Query for Restaurant</p>
-            <input class="Userinput" id="userInput" type="text" placeholder="Search by: Name,Category or City"></input>
+            <p>Please input query for Restaurant</p>
+            <input class="search" id="userInput" type="text" placeholder="Search by: Name,Category or City"></input>
+            <ul class="suggestion"> 
+             <li>
+                 search example Wendy's
+             </li> 
+            </ul>
         </form>
         <div class="Resultfilter">
 
