--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </div>
         <form>
             <p>Please Input Query for Restaurant</p>
-            <input class="UserInput" id="userInput" type="text" placeholder="Search by: Name,Category or City"></input>
+            <input class="UserInput" id="UserInput" type="text" placeholder="Search by: Name,Category or City"></input>
         </form>
         <div class="Resultfilter">
 
