--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <div class="header">
-            <h1>>Carl Jeanty, Alexey Jeffers, and Aarthi Ganesh Assignment 2</h1>
+            <h1>Carl Jeanty, Alexey Jeffers, and Aarthi Ganesh Assignment 2</h1>
             
         </div>
         <form>
