--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <form>
             <p>Please input query for Restaurant</p>
             <input class="search" id="userInput" type="text" placeholder="Search by: Name,Category or City"></input>
-            <ul class="suggestion"> 
+            <ul class="suggestions"> 
              <li>
                  search example Wendy's
              </li> 
