--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Carl Jeanty, Aarthi Ganesh and Alexey Jeffers assignment 2</title>
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
     <script src="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
 </head>
 <body>
